# antidote

./: com.antidote.agent.plist  pyproject.toml  requirements.txt  start.sh  wizard.py
antidote/: __main__.py  config.py  main.py
antidote/agent/: context.py  loop.py
antidote/channels/: base.py  telegram.py
antidote/memory/: __init__.py  store.py
antidote/providers/: __init__.py  base.py  ollama.py  openrouter.py
antidote/security/: safety.py  secrets.py
antidote/tools/: base.py  filesystem.py  registry.py  shell.py
workspace/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
